# FBMKT

./: .env.example  .gitignore  LICENSE  README.md  README_CN.md  login.py  main.py  pyproject.toml  watchlist.yaml
src/: config.py  models.py
src/llm/: evaluator.py
src/matcher/: matcher.py
src/notifier/: notifier.py
src/pipeline/: scheduler.py
src/scraper/: scraper.py
src/state/: state.py
